--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -1,3 +1,17 @@
+#
+# refind.conf
+# Configuration file for the rEFInd boot menu
+#
+
+# Timeout in seconds for the main menu screen. Setting the timeout to 0
+# disables automatic booting (i.e., no timeout). Setting it to -1 causes
+# an immediate boot to the default OS *UNLESS* a keypress is in the buffer
+# when rEFInd launches, in which case that keypress is interpreted as a
+# shortcut key. If no matching shortcut is found, rEFInd displays its
+# menu with no timeout.
+#
+timeout 20
+
 # Normally, when the timeout period has passed, rEFInd boots the
 # default_selection. If the following option is uncommented, though,
 # rEFInd will instead attempt to shut down the computer.
@@ -358,7 +372,7 @@
 # partition unique GUID, as in "myvol:EFI/somedir" to exclude EFI/somedir
 # from the scan on the myvol volume but not on other volumes.
 #
-dont_scan_dirs +,EFI/Pop_OS-9ff79750-7edc-4e5a-be44-51e0abc611f3,EFI/systemd,EFI/Boot,/loader,boot
+#dont_scan_dirs ESP:/EFI/boot,EFI/Dell,EFI/memtest86
 
 # Files that should NOT be included as EFI boot loaders (on the
 # first line of the display). If you're using a boot loader that
@@ -513,6 +527,7 @@ dont_scan_dirs +,EFI/Pop_OS-9ff79750-7edc-4e5a-be44-51e0abc611f3,EFI/systemd,EFI
 # the secondary file must be referenced AFTER the setting you want to
 # override. Note that the secondary file may NOT load a tertiary file.
 #
+#include manual.conf
 
 # Sample manual configuration stanzas. Each begins with the "menuentry"
 # keyword followed by a name that's to appear in the menu (use quotes
@@ -560,83 +575,83 @@ dont_scan_dirs +,EFI/Pop_OS-9ff79750-7edc-4e5a-be44-51e0abc611f3,EFI/systemd,EFI
 # This entry includes Linux-specific boot options and specification
 # of an initial RAM disk. Note uses of Linux-style forward slashes.
 # Also note that a leading slash is optional in file specifications.
-
-menuentry Pop_OS {
-    icon EFI/refind/themes/refind-theme-regular/icons/128-48/os_pop.png
-    volume 9FF79750-7EDC-4E5A-BE44-51E0ABC611F3
-    loader EFI/systemd/systemd-bootx64.efi
-    initrd EFI/Pop_OS-9ff79750-7edc-4e5a-be44-51e0abc611f3/initrd.img
+menuentry Linux {
+    icon EFI/refind/icons/os_linux.png
+    volume 904404F8-B481-440C-A1E3-11A5A954E601
+    loader bzImage-3.3.0-rc7
+    initrd initrd-3.3.0.img
+    options "ro root=UUID=5f96cafa-e0a7-4057-b18f-fa709db5b837"
+    disabled
 }
 
-# # Below is a more complex Linux example, specifically for Arch Linux.
-# # This example MUST be modified for your specific installation; if nothing
-# # else, the PARTUUID code must be changed for your disk. Because Arch Linux
-# # does not include version numbers in its kernel and initrd filenames, you
-# # may need to use manual boot stanzas when using fallback initrds or
-# # multiple kernels with Arch. This example is modified from one in the Arch
-# # wiki page on rEFInd (https://wiki.archlinux.org/index.php/rEFInd).
-# menuentry "Arch Linux" {
-#     icon     /EFI/refind/icons/os_arch.png
-#     volume   "Arch Linux"
-#     loader   /boot/vmlinuz-linux
-#     initrd   /boot/initramfs-linux.img
-#     options  "root=PARTUUID=5028fa50-0079-4c40-b240-abfaf28693ea rw add_efi_memmap"
-#     submenuentry "Boot using fallback initramfs" {
-#         initrd /boot/initramfs-linux-fallback.img
-#     }
-#     submenuentry "Boot to terminal" {
-#         add_options "systemd.unit=multi-user.target"
-#     }
-#     disabled
-# }
+# Below is a more complex Linux example, specifically for Arch Linux.
+# This example MUST be modified for your specific installation; if nothing
+# else, the PARTUUID code must be changed for your disk. Because Arch Linux
+# does not include version numbers in its kernel and initrd filenames, you
+# may need to use manual boot stanzas when using fallback initrds or
+# multiple kernels with Arch. This example is modified from one in the Arch
+# wiki page on rEFInd (https://wiki.archlinux.org/index.php/rEFInd).
+menuentry "Arch Linux" {
+    icon     /EFI/refind/icons/os_arch.png
+    volume   "Arch Linux"
+    loader   /boot/vmlinuz-linux
+    initrd   /boot/initramfs-linux.img
+    options  "root=PARTUUID=5028fa50-0079-4c40-b240-abfaf28693ea rw add_efi_memmap"
+    submenuentry "Boot using fallback initramfs" {
+        initrd /boot/initramfs-linux-fallback.img
+    }
+    submenuentry "Boot to terminal" {
+        add_options "systemd.unit=multi-user.target"
+    }
+    disabled
+}
 
-# # A sample entry for loading Ubuntu using its standard name for
-# # its GRUB 2 boot loader. Note uses of Linux-style forward slashes
-# menuentry Ubuntu {
-#     loader /EFI/ubuntu/grubx64.efi
-#     icon /EFI/refind/icons/os_linux.png
-#     disabled
-# }
+# A sample entry for loading Ubuntu using its standard name for
+# its GRUB 2 boot loader. Note uses of Linux-style forward slashes
+menuentry Ubuntu {
+    loader /EFI/ubuntu/grubx64.efi
+    icon /EFI/refind/icons/os_linux.png
+    disabled
+}
 
-# # A minimal ELILO entry, which probably offers nothing that
-# # auto-detection can't accomplish.
-# menuentry "ELILO" {
-#     loader \EFI\elilo\elilo.efi
-#     disabled
-# }
+# A minimal ELILO entry, which probably offers nothing that
+# auto-detection can't accomplish.
+menuentry "ELILO" {
+    loader \EFI\elilo\elilo.efi
+    disabled
+}
 
-# # Like the ELILO entry, this one offers nothing that auto-detection
-# # can't do; but you might use it if you want to disable auto-detection
-# # but still boot Windows....
-# menuentry "Windows 7" {
-#     loader \EFI\Microsoft\Boot\bootmgfw.efi
-#     disabled
-# }
+# Like the ELILO entry, this one offers nothing that auto-detection
+# can't do; but you might use it if you want to disable auto-detection
+# but still boot Windows....
+menuentry "Windows 7" {
+    loader \EFI\Microsoft\Boot\bootmgfw.efi
+    disabled
+}
 
-# # EFI shells are programs just like boot loaders, and can be
-# # launched in the same way. You can pass a shell the name of a
-# # script that it's to run on the "options" line. The script
-# # could initialize hardware and then launch an OS, or it could
-# # do something entirely different.
-# menuentry "Windows via shell script" {
-#     icon \EFI\refind\icons\os_win.png
-#     loader \EFI\tools\shell.efi
-#     options "fs0:\EFI\tools\launch_windows.nsh"
-#     disabled
-# }
+# EFI shells are programs just like boot loaders, and can be
+# launched in the same way. You can pass a shell the name of a
+# script that it's to run on the "options" line. The script
+# could initialize hardware and then launch an OS, or it could
+# do something entirely different.
+menuentry "Windows via shell script" {
+    icon \EFI\refind\icons\os_win.png
+    loader \EFI\tools\shell.efi
+    options "fs0:\EFI\tools\launch_windows.nsh"
+    disabled
+}
 
-# # Mac OS is normally detected and run automatically; however,
-# # if you want to do something unusual, a manual boot stanza may
-# # be the way to do it. This one does nothing very unusual, but
-# # it may serve as a starting point. Note that you'll almost
-# # certainly need to change the "volume" line for this example
-# # to work.
-# menuentry "My macOS" {
-#     icon \EFI\refind\icons\os_mac.png
-#     volume "macOS boot"
-#     loader \System\Library\CoreServices\boot.efi
-#     disabled
-# }
+# Mac OS is normally detected and run automatically; however,
+# if you want to do something unusual, a manual boot stanza may
+# be the way to do it. This one does nothing very unusual, but
+# it may serve as a starting point. Note that you'll almost
+# certainly need to change the "volume" line for this example
+# to work.
+menuentry "My macOS" {
+    icon \EFI\refind\icons\os_mac.png
+    volume "macOS boot"
+    loader \System\Library\CoreServices\boot.efi
+    disabled
+}
 
-# # Load rEFInd theme Regular
-# include themes/refind-theme-regular/theme.conf
+include refind_custom.conf
