--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "refind/themes/refind-theme-regular"]
 	path = refind/themes/refind-theme-regular
 	url = https://github.com/bobafetthotmail/refind-theme-regular
+[submodule "home/.oh-my-zsh/plugins/zsh-syntax-highlighting"]
+	path = home/.oh-my-zsh/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
