--- a/refind/refind_custom.conf
+++ b/refind/refind_custom.conf
@@ -1,9 +1,9 @@
+# Load rEFInd theme Regular
+include EFI/refind/themes/theme.conf
+
 menuentry Pop_OS {
     icon os_pop.png
-    #volume 9FF79750-7EDC-4E5A-BE44-51E0ABC611F3
+    volume 0F6B861B-1582-483C-9697-8FA004DBF4DF
     loader EFI/systemd/systemd-bootx64.efi
-    #initrd EFI/Pop_OS-9ff79750-7edc-4e5a-be44-51e0abc611f3/initrd.img
+    initrd EFI/Pop_OS-0f6b861b-1582-483c-9697-8fa004dbf4df/initrd.img
 }
-
-# Load rEFInd theme Regular
-include themes/theme.conf
