--- a/refind/refind_custom.conf
+++ b/refind/refind_custom.conf
@@ -1,9 +1,5 @@
 # Load rEFInd theme Regular
-include EFI/refind/themes/theme.conf
+include themes/theme.conf
 
-menuentry Pop_OS {
-    icon os_pop.png
-    volume 0F6B861B-1582-483C-9697-8FA004DBF4DF
-    loader EFI/systemd/systemd-bootx64.efi
-    initrd EFI/Pop_OS-0f6b861b-1582-483c-9697-8fa004dbf4df/initrd.img
-}
+# Custom menu entries
+indlude menu_entires.conf
