finally fixed refind....

--- a/refind/refind_custom.conf
+++ b/refind/refind_custom.conf
@@ -1,5 +1,2 @@
-# Load rEFInd theme Regular
-include themes/theme.conf
-
-# Custom menu entries
-indlude menu_entires.conf
+dont_scan_dirs +,EFI/BOOT,EFI/systemd
+dont_scan_files +,vmlinuz.efi,vmlinuz-previous.efi,fwupdx64.efi
