--- a/config/aseprite/aseprite.ini
+++ b/config/aseprite/aseprite.ini
@@ -1,6 +1,6 @@
 [GfxMode]
-Maximized = true
-Frame = 1 38 1920 1043
+Maximized = false
+Frame = 0 1 1920 1048
 
 
 [general]
@@ -17,23 +17,27 @@ language = en
 
 
 [color_bar]
-box_size = 17
-fg_color = rgb{20,16,19,255}
-bg_color = index{0}
+box_size = 11
+fg_color = rgb{91,49,56,255}
+bg_color = index{69}
 selector = 4
 show_invalid_fg_bg_color_alert = true
 entries_separator = true
+tiles_box_size = 16
+fg_tile = 80
+show_color_and_tiles = true
+bg_tile = 0
 
 
 [updater]
-inits = 12
+inits = 32
 wait_days = 0.200000
-last_check = 1637258433
+last_check = 1642444552
 uuid = ba43347805b45f5fd3b6557c176ce0d35264f3be
-current_version = 1.2.29
-new_version = 1.2.30
-new_url = https://community.aseprite.org/t/11466/1
-exits = 5
+current_version = 1.3-beta7
+new_version = 1.3-beta10
+new_url = https://community.aseprite.org/t/12488/1
+exits = 19
 
 
 [selection]
@@ -53,6 +57,7 @@ pivot_position = 4
 rotation_algorithm = 0
 modify_selection_quantity = 1
 modify_selection_brush = 0
+mode = 0
 
 
 [grid]
@@ -68,33 +73,39 @@ cache_file = /tmp/Aseprite/http---blog.aseprite.org-rss
 
 
 [layout:main_window]
-color_bar_splitter = 66
-palette_spectrum_splitter = 80
+color_bar_splitter = 137
+palette_spectrum_splitter = 87.3188
 fg_color = 0
 bg_color = 0
-timeline_splitter = 75
+timeline_splitter = 86.9714
 
 
 [MiniEditor]
-Enabled = true
-WindowPos = 1618 83 233 230
+Enabled = false
+WindowPos = 1392 754 480 252
+WindowFrame = 3312 786 480 252
 
 
 [RecentFiles]
 _ = true
-0000 = /home/ben/projects/ldjam49/sprites/tiles.png
-0001 = /home/ben/projects/ldjam49/art/tiles.ase
-0002 = /home/ben/projects/ldjam49/art/fx.ase
-0003 = /home/ben/projects/ldjam49/art/things.ase
-0004 = /home/ben/projects/ldjam49/art/ui.ase
-0005 = /home/ben/projects/ldjam49/art/player.ase
-0006 = /home/ben/projects/ldjam49/art/objects.ase
+0000 = /home/ben/projects/tiletest/art/tiles.ase
+0001 = /home/ben/projects/tiletest/art/fg_tiles.ase
+0002 = /home/ben/projects/tiletest/art/tilesheet_bg.ase
+0003 = /home/ben/projects/tiletest/art/bg_tiles.ase
+0004 = /home/ben/projects/ldjam49/art/tiles.ase
+0005 = /home/ben/projects/ldjam49/sprites/tiles.png
+0006 = /home/ben/projects/ldjam49/art/fx.ase
+0007 = /home/ben/projects/ldjam49/art/things.ase
+0008 = /home/ben/projects/ldjam49/art/ui.ase
+0009 = /home/ben/projects/ldjam49/art/player.ase
+0010 = /home/ben/projects/ldjam49/art/objects.ase
 
 
 [RecentPaths]
 _ = true
-0000 = /home/ben/projects/ldjam49/sprites
+0000 = /home/ben/projects/tiletest/art
 0001 = /home/ben/projects/ldjam49/art
+0002 = /home/ben/projects/ldjam49/sprites
 
 
 [new_file]
@@ -109,6 +120,7 @@ pixel_ratio = 1:1
 [tool.pencil.brush]
 size = 1
 type = 0
+angle = 0
 
 
 [layout:options]
@@ -155,7 +167,7 @@ brush_preview = 2
 
 
 [theme]
-selected = JMSWRNR's Dark Theme
+selected = default-dark
 
 
 [experimental]
@@ -166,6 +178,7 @@ use_native_file_dialog = false
 one_finger_as_mouse_movement = true
 flash_layer = false
 nonactive_layers_opacity = 255
+multiple_windows = true
 
 
 [eyedropper]
@@ -235,7 +248,7 @@ show_alert = true
 
 
 [scripts]
-show_run_script_alert = true
+show_run_script_alert = false
 
 
 [color]
@@ -269,7 +282,8 @@ size = 1
 
 
 [KeyboardShortcuts]
-WindowPos = 240 127 1440 762
+WindowPos = 483 129 1353 861
+WindowFrame = 2403 129 1353 861
 
 
 [layout:keyboard_shortcuts]
@@ -281,7 +295,8 @@ color = 0
 
 
 [ExportSpriteSheet]
-WindowPos = 1049 153 540 700
+WindowPos = 1217 189 586 694
+WindowFrame = 3137 189 586 694
 
 
 [ExportFile]
@@ -299,6 +314,7 @@ bg_color = 0
 WindowPos = 812 394 296 228
 Preview = true
 Tolerance = 0
+WindowFrame = 2732 426 296 228
 
 
 [Outline]
@@ -309,11 +325,13 @@ Preview = true
 
 
 [CelProperties]
-WindowPos = 772 468 377 80
+WindowPos = 772 500 377 80
+WindowFrame = 2692 500 377 80
 
 
 [CanvasSize]
-WindowPos = 1601 106 285 390
+WindowPos = 1599 106 285 390
+WindowFrame = 3519 106 285 390
 
 
 [filters]
@@ -325,7 +343,7 @@ trim_outside = false
 
 
 [tool.magic_wand]
-contiguous = false
+contiguous = true
 
 
 [tool.magic_wand.brush]
@@ -355,3 +373,85 @@ size = 3
 
 [tool.pencil]
 freehand_algorithm = 0
+opacity = 255
+ink = 0
+
+
+[ImportSpriteSheet]
+WindowFrame = 2496 313 410 332
+WindowPos = 576 313 410 332
+
+
+[FileSelector]
+WindowFrame = 0 0 3840 1080
+WindowPos = -1920 0 3840 1080
+
+
+[LayerProperties]
+WindowFrame = 2708 461 376 232
+WindowPos = 2708 461 376 232
+
+
+[layout:layer_properties]
+color = 0
+
+
+[layers]
+user_data_visibility = true
+
+
+[layout:sprite_properties]
+color = 0
+
+
+[SpriteProperties]
+WindowFrame = 2679 372 402 336
+WindowPos = 759 372 402 336
+
+
+[layout:cel_properties]
+color = 0
+
+
+[cels]
+user_data_visibility = false
+
+
+[sprite]
+user_data_visibility = false
+
+
+[tool.rectangular_marquee.brush]
+size = 1
+
+
+[quantization]
+rgbmap_algorithm = 0
+
+
+[save_brush]
+fg_color = true
+bg_color = true
+
+
+[tool.eyedropper]
+opacity = 255
+ink = 0
+
+
+[tool.eyedropper.brush]
+type = 0
+size = 1
+angle = 0
+
+
+[tool.filled_rectangle.brush]
+size = 1
+
+
+[brush]
+pattern = 1
+
+
+[script_access]
+f5ad2a6367b29c50e5894b2aa2729e3bbcbb807e = 15
