--- a/config/flameshot/flameshot.ini
+++ b/config/flameshot/flameshot.ini
@@ -1,12 +1,13 @@
 [General]
+contrastOpacity=188
 disabledTrayIcon=false
 drawColor=#ff0000
 drawThickness=0
 saveAfterCopy=true
 saveAfterCopyPath=/home/ben/Pictures
-savePath=/home/ben/sync/stuff/cellarium_writeup
-savePathFixed=false
-showStartupLaunchMessage=false
+savePath=/home/ben/Pictures/screenshots
+savePathFixed=true
+showStartupLaunchMessage=true
 startupLaunch=true
 uiColor=#009693
 
