--- a/config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -2,10 +2,10 @@
 Name=Untitled
 
 [Video]
-BaseCX=1920
-BaseCY=1080
-OutputCX=1920
-OutputCY=1080
+BaseCX=1275
+BaseCY=820
+OutputCX=1275
+OutputCY=820
 FPSType=0
 FPSCommon=60
 
@@ -21,8 +21,8 @@ FilePath=/home/ben/Videos
 Mode=Simple
 
 [Hotkeys]
-OBSBasic.StartRecording={\n    "bindings": [\n        {\n            "key": "OBS_KEY_SCROLLLOCK"\n        }\n    ]\n}
-OBSBasic.StopRecording={\n    "bindings": [\n        {\n            "key": "OBS_KEY_SCROLLLOCK"\n        }\n    ]\n}
+OBSBasic.StartRecording={"bindings":[{"key":"OBS_KEY_SCROLLLOCK"},{"key":"OBS_KEY_F12","shift":true}]}
+OBSBasic.StopRecording={"bindings":[{"key":"OBS_KEY_SCROLLLOCK"},{"key":"OBS_KEY_F12","shift":true}]}
 
 [AdvOut]
 TrackIndex=1
@@ -38,3 +38,6 @@ FFAEncoderId=0
 FFAEncoder=
 FFAudioMixes=1
 VodTrackIndex=2
+RescaleRes=1920x1011
+RecRescaleRes=1920x1011
+FFRescaleRes=1920x1011
