--- a/config/obs-studio/global.ini
+++ b/config/obs-studio/global.ini
@@ -4,7 +4,7 @@ Pre21Defaults=false
 Pre23Defaults=false
 Pre24.1Defaults=false
 FirstRun=true
-LastVersion=436273154
+LastVersion=452984833
 
 [Basic]
 Profile=Untitled
@@ -21,7 +21,7 @@ AlwaysOnTop=false
 SceneDuplicationMode=true
 SwapScenesMode=true
 EditPropertiesMode=false
-PreviewProgramMode=true
+PreviewProgramMode=false
 DocksLocked=false
 
 [PropertiesWindow]
